# organizator

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  requirements.txt  setup.cfg
src/: config.rs  dated.rs  logging.rs  main.rs  tasks.rs  time.rs  tui.rs  words.rs
src/display_console/: dated.rs
src/display_file/: dated.rs  mod.rs
src/display_tui/: dated.rs  mod.rs  tui_current_view.rs  tui_view.rs
src/logging/: log_level.rs  mod.rs
src/organizator/: __main__.py  version.py
src/organizator/data/: logger.ini
src/task_types/: _task_types.rs  mod.rs  progressive.rs  recurring.rs  serial.rs
src/tasks/: mod.rs  task.rs  task_data.rs  task_list.rs  task_meta.rs  task_sections.rs  type_marked_day.rs  type_progressive.rs  type_recurring.rs  type_simple.rs  types.rs
src/tasks/data/: dates.rs  mod.rs  sections.rs
src/tasks/task/: contents.rs  meta.rs  mod.rs
src/tasks/types/: mod.rs  type_marked_day.rs  type_progressive.rs  type_recurring.rs  type_simple.rs
src/time/: mod.rs  parsing.rs  timestamp.rs
