[package]
name = "organizator"
version = "0.1.0"
authors = ["András Németh <sunarch@protonmail.com>"]
edition = "2021"
description = "General and recurring task manager"
documentation = "https://docs.rs/organizator"
readme = "README.md"
homepage = "https://codeberg.org/sunarch/organizator"
repository = "https://codeberg.org/sunarch/organizator"
license = "MPL-2.0"
keywords = [
    "organizator",
    "task",
    "tasks"
]
categories = [
    "command-line-utilities"
]
exclude = [".idea/"]
default-run = "organizator"

[dependencies]
directories-next = "2.0.0"
ratatui = "0.27.0"

[lints.clippy]
needless_return = "allow"
