[metadata]
name = organizator
version = attr: organizator.version.__version__
url = https://github.com/sunarch/organizator
project_urls =
    Bug Tracker = https://github.com/sunarch/organizator/issues
author = András Németh (sunarch)
author_email = sunarch@protonmail.com
maintainer = András Németh (sunarch)
maintainer_email = sunarch@protonmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Development Status :: 1 - Planning
    Intended Audience :: End Users/Desktop
    Topic :: Database :: Front-Ends
    Topic :: Office/Business
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Scheduling
    Typing :: Typed
license = Mozilla Public License 2.0 (MPL 2.0)
description = organizator - Organization manager
long_description = file: README.md
long_description_content_type = text/markdown
keywords = organizator, organization, manager, money, space
platforms = Any

[options]
python_requires = >=3.10
packages = find:
package_dir =
    = src

[options.entry_points]
console_scripts =
    organizator = organizator.__main__:main

[options.packages.find]
where = src

[options.package_data]
    organizator = data/logger.ini
